Update vim stuff

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -74,8 +74,8 @@ bind Left previous-window
 bind Right next-window
 
 # hjkl pane traversal
-bind-key | split-window -v
-bind-key _ split-window -h
+bind-key | split-window -h
+bind-key _ split-window -v
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
